--- a/resources/styles/css/styles.css
+++ b/resources/styles/css/styles.css
@@ -242,7 +242,7 @@ header {
 
 .main-nav li a:link,
 .main-nav li a:visited {
-    padding 8px 0;
+    padding: 8px 0;
     color: #fff;
     text-decoration:none;
     text-transform: uppercase;
@@ -254,6 +254,49 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid #2980b9;
+}
+
+/*sticky navi*/
+
+.sticky{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color:rgba(255, 255, 255, 0.96);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
+}
+
+.sticky .main-nav {
+    margin-top: 18px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 16px 0;
+    color: #555;
+}
+
+.sticky .logo {display: none;}
+.sticky .logo-black {
+    display: block;
+    transform: scale(
+        3.0);
+}
+
+/*mobile navi*/
+
+.mobile-nav-icon {
+    float:right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon i {
+    font-size: 200%;
+    color: white;
 }
 
 /*-------------------------------------------------------*/
@@ -455,10 +498,6 @@ header {
 
 }
 
-.linkedin-link a i {
-
-}
-
 .linkedin-link a {
     border-bottom: 0;
 }
@@ -534,6 +573,24 @@ footer p {
 
 
 
+/*
+*-------------------------------------------------------*/
+/*ANIMATIONS*/
+/*-------------------------------------------------------*/
 
-*/
+.js--wp-1 {
+    opacity:0;
+}
+
+.js--wp-1.animated {
+    opacity:1;
+}
+
+.js--wp-3 {
+    opacity:0;
+}
+
+.js--wp-3.animated {
+    opacity:1;
+}
 
